--- a/package.json
+++ b/package.json
@@ -20,5 +20,23 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.4"
-  }
+  },
+  "description": "A simple blog project created with NextJS - TypeScript",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Marknjo/next-profile-blog.git"
+  },
+  "keywords": [
+    "NextJs",
+    "React",
+    "Typescript",
+    "JavaScript"
+  ],
+  "author": "Mark Njoroge",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Marknjo/next-profile-blog/issues"
+  },
+  "homepage": "https://github.com/Marknjo/next-profile-blog#readme"
 }
