--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "esbuild": "^0.14.48",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
+    "mongoose": "^6.4.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +20,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "rehype-prism-plus": "^1.4.1",
     "remark-gfm": "^3.0.1",
+    "sanitize-html": "^2.7.0",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-syntax-highlighter": "^15.5.2",
+    "@types/sanitize-html": "^2.6.2",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.4"
